--- a/index.html
+++ b/index.html
@@ -1,11 +1,73 @@
+<!DOCTYPE HTML>
 <html>
   <head>
-
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400i,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i&display=swap" rel="stylesheet">
+    <title>Scott Jowsey - Home</title>
   </head>
   <body>
+    <div class = "nav">
+      <div class = "line">
+      </div>
+      <div class = "logo">
+        <h1>SCOTT JOWSEY</h1>
+        <h3>IXXN221 BLOG</h3>
+      </div>
+      <div class = "navigation">
+          <a href="index.html">HOME</a>
+          <a>ABOUT</a>
+          <a href="#blog-posts2">POSTS</a>
+      </div>
+    </div>
 
+    <div id = "home-info">
+      <div class = "home-title">
+        <p>Featured Post</p>
+      </div>
+      <div class = "home-blurb">
+        <h1>Reflection:<br>The importance of Git for Designers</h1>
+      </div>
+      <div class = "home-blog-button">
+        <a href = "reflection.html"><p>Read More ...</p></a>
+      </div>
+    </div>
+
+    <div id = "blog-posts2">
+      <div class = "page-break">
+      </div>
+
+      <div class = "posts2">
+        <div class = "post-header">
+          <h2>BLOG POSTS</h2>
+        </div>
+
+        <div class = "post1">
+          <div class = "post-image2">
+          </div>
+          <div class = "post-date2">
+            <p>Thursday 18th July</p>
+          </div>
+          <div class = "post-title2">
+            <h1>Reflection:<br>The importance of Git for Designers</h1>
+          </div>
+          <div class = "post-moreinfo2">
+            <a href = "reflection.html"><p>Read More ...</p></a>
+          </div>
+        </div>
+
+        <div class = "post2">
+        </div>
+
+        <div class = "post3">
+        </div>
+
+        <div class = "post4">
+        </div>
+
+
+      </div>
+    </div>
   </body>
-  <footer>
-  </footer>
 
 </html>
