Tutorial 3 Blog Post

--- a/flexbox.html
+++ b/flexbox.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400i,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <title>Scott Jowsey - Home</title>
   </head>
   <body>
@@ -17,20 +18,30 @@
       <div class = "navigation">
           <a href="index.html">HOME</a>
           <a>ABOUT</a>
-          <a href="#blog-posts2">POSTS</a>
+          <a href="#blog-posts">POSTS</a>
       </div>
     </div>
 
-    <div id = "home-info">
-      <div class = "home-title">
-        <p>Featured Post</p>
+    <div class = "flexbox-post">
+      <div class = "flexbox-date">
+        <p>Thursday 25th July</p>
       </div>
-      <div class = "home-blurb">
-        <h1>Reflection:<br>Implementing Responsive Design</h1>
+      <div class = "flexbox-title">
+        <h1>Reflection: Implementing Responsive Design</h1>
       </div>
-      <div class = "home-blog-button">
-        <a href = "reflection.html"><p>Read More ...</p></a>
+      <div class = "flexbox-image">
+        <img src = "images/ipad.svg" >
       </div>
+      <div class = "flexbox-image">
+        <img src = "images/iphone.svg" >
+      </div>
+      <div class = "flexbox-paragraph">
+        <p>Shown above are the potential wireframes for this website if they were to be displayed on an iPad or iPhone Device.
+          <br></br>Implementing Responsive Web Design allows websites that are projected on a Computer to be resized to suit the dimensions of smaller devices.
+         This makes it more friendly for users who prefer to operate with their phones - ultimately making their experience on the particular website better. From a business standpoint, satisfied website users means that they may be more inclined to purchase their products which
+        would see increased sales and revenue for the business. Responsive Design may take a little bit to grasp, but when implemented correctly, it can do wonders for a website. </p>
+      </div>
+
     </div>
 
     <div id = "blog-posts">
