--- a/reflection.html
+++ b/reflection.html
@@ -56,25 +56,41 @@
       </div>
     </div>
 
-    <div class = "blog-posts">
+    <div id = "blog-posts">
       <div class = "page-break">
       </div>
 
-      <div class = "posts">
+      <div class = "posts2">
         <div class = "post-header">
-          <h2>LATEST POSTS</h2>
+          <h2>BLOG POSTS</h2>
         </div>
 
         <div class = "post1">
-          <div class = "post-image">
+          <div class = "post-image2">
+            <img src = "images/flex-image.svg" />
           </div>
-          <div class = "post-date">
+          <div class = "post-date2">
+            <p>Thursday 25th July</p>
+          </div>
+          <div class = "post-title2">
+            <h1>Reflection:<br>Implementing Responsive Design</h1>
+          </div>
+          <div class = "post-moreinfo2">
+            <a href = "flexbox.html"><p>Read More ...</p></a>
+          </div>
+        </div>
+
+        <div class = "post2">
+          <div class = "post-image">
+            <img src = "images/wireframe2.svg" >
+          </div>
+          <div class = "post-date2">
             <p>Thursday 18th July</p>
           </div>
-          <div class = "post-title">
+          <div class = "post-title2">
             <h1>Reflection:<br>The importance of Git for Designers</h1>
           </div>
-          <div class = "post-moreinfo">
+          <div class = "post-moreinfo2">
             <a href = "reflection.html"><p>Read More ...</p></a>
           </div>
         </div>
