Accessibility Post Update

--- a/flexbox.html
+++ b/flexbox.html
@@ -55,6 +55,21 @@
 
         <div class = "post1">
           <div class = "post-image2">
+            <img src = "images/accessibility2.svg" alt = "Image of HTML code that creates an image description" />
+          </div>
+          <div class = "post-date2">
+            <p>Sunday 11th August</p>
+          </div>
+          <div class = "post-title2">
+            <h1>Reflection:<br>Improving Website Accessibility</h1>
+          </div>
+          <div class = "post-moreinfo2">
+            <a href = "accessibility.html"><p>Read More ...</p></a>
+          </div>
+        </div>
+
+        <div class = "post2">
+          <div class = "post-image2">
             <img src = "images/flex-image.svg" />
           </div>
           <div class = "post-date2">
@@ -68,7 +83,7 @@
           </div>
         </div>
 
-        <div class = "post2">
+        <div class = "post3">
           <div class = "post-image">
             <img src = "images/wireframe2.svg" >
           </div>
