--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <p>Featured Post</p>
       </div>
       <div class = "home-blurb">
-        <h1>Reflection:<br>Implementing Responsive Design</h1>
+        <h1>Reflection:<br>Improving Website Accessibility</h1>
       </div>
       <div class = "home-blog-button">
-        <a href = "reflection.html"><p>Read More ...</p></a>
+        <a href = "accessibility.html"><p>Read More ...</p></a>
       </div>
     </div>
 
@@ -44,7 +44,22 @@
 
         <div class = "post1">
           <div class = "post-image2">
-            <img src = "images/flex-image.svg" />
+            <img src = "images/accessibility2.svg" alt = "Image of HTML code that creates an image description" />
+          </div>
+          <div class = "post-date2">
+            <p>Sunday 11th August</p>
+          </div>
+          <div class = "post-title2">
+            <h1>Reflection:<br>Improving Website Accessibility</h1>
+          </div>
+          <div class = "post-moreinfo2">
+            <a href = "accessibility.html"><p>Read More ...</p></a>
+          </div>
+        </div>
+
+        <div class = "post2">
+          <div class = "post-image2">
+            <img src = "images/flex-image.svg" alt = "Website Wireframe for Desktop Computer and Mobile Devices" />
           </div>
           <div class = "post-date2">
             <p>Thursday 25th July</p>
@@ -57,7 +72,7 @@
           </div>
         </div>
 
-        <div class = "post2">
+        <div class = "post3">
           <div class = "post-image">
             <img src = "images/wireframe2.svg" >
           </div>
