--- a/accessibility.html
+++ b/accessibility.html
@@ -27,32 +27,17 @@
         <p>Thursday 18th July</p>
       </div>
       <div class = "reflection-title">
-        <h1>Reflection: The importance of Git for Designers</h1>
+        <h1>Reflection: Improving Website Accessibility</h1>
       </div>
-      <div class = "reflection-image">
+      <div class = "accessibility-image">
       </div>
       <div class = "reflection-paragraph">
-        <p>Before I delve into the reasons why I believe Git is good whilst being in a collaborative project
-          environment, I’ll start by answering the first important question: What is Git?
-          <br></br>Git is a version control system which allows users to commit changes to code overtime via the implementation
-           of a Repository. A repository is a data control system which stores and records the changes made to the source
-            code <a href = "https://towardsdatascience.com/a-quick-primer-to-version-control-using-git-3fbdbb123262">(Zheng, 2018)</a>.
-            In conjunction with other services such as GitHub, it enables users to access these changes through the
-             Cloud and remotely update the source code through their local repository.
-          <br></br>The importance of implementing a Git Repository is exemplified in a collaborative project environment.
-          When collaborating with other Designers, the creation of a Repository allows multiple users to work on the same
-          code on different devices and commit their progress via GitHub. This method is possible through the Git
-          Repository as it tracks specific changes made by those who contributed to the creation of the code
-          <a href = "https://towardsdatascience.com/a-quick-primer-to-version-control-using-git-3fbdbb123262">(Zheng, 2018)</a>.
-          This allows each Designer to work on a specific aspect of the code and enables the creation of rapid, functional
-          prototypes for the client.
-          <br></br>For designers, the creation of a repository is an easy way to present current updates of prototypes to other
-          stakeholders <a href = "https://www.atlassian.com/git/tutorials/why-git" >(Atlassian, n.d.)</a>. If other stakeholders want to change the user flow of a prototype, the repository
-          allows Designers to revert to specific versions of code, ‘branch’ away from the current prototype and meet the
-          demands of the stakeholder– without the risk of breaking the prototypes’ existing functionality.
-          <br></br>As much as Git was hard to understand initially, I now understand the benefits of using this service. It
-          allows us as designers to rapidly iterate prototypes to meet the client’s needs and serves as an external service
-          to save the work that we spent way too much time on. </p>
+          <p>Accessibility is an underlying issue that is present on many online sites.  For example, if a user has a lack of eyesight and has to zoom up on webpages to see, the site must look just as good as if it was viewed at 100%. Although there are a small number of users who have visual or hearing impairments, accommodating to them will make a big difference on their thoughts on the website and how they may suggest this service to their peers. Thus, the website I am creating for Bomber Breweries will be accessible to users who may have visual or hearing impairments – catering to more users and resulting in potential increases for Bomber Breweries’ revenue and profit.
+          <br></br>To improve the page’s accessibility, the first thing I did was utilise the Document Object Model (DOM). This ensures that if the user operates using the ‘Tab’ button, the order of information will be correct and will lead them down the page in a sufficient matter. To do this, I made sure that each section was in the order of where it was on the page (e.g. Navigation Bar at the top of code). This allowed the tab order to be correct and makes it easier for the impaired user to navigate through the page.
+          <br></br>Adding Alterative (Alt) text to each image is another way I have made this website more accessible to impaired users. Before Monday’s lecture, I never really used Alt text (Bad practice) in my code. However, after Monday’s lecture, I realised the importance of putting text in the image and the implications to impaired users if this was not placed in. Adding the text in allows visually impaired users to hear the description of the image through voice commands. This allows them to visualise the image in their brain and understand why it was placed on the webpage.
+          <br></br>Potential additions to improve accessibility could be improving the layout of the page when zoomed up to 200%. Although this is an integral part to Accessibility, I am unsure on how to do this and have decided not to implement it in this week’s tutorial.
+          Another potential accessibility idea could be allowing the user to choose whether they would prefer the website being displayed in ‘Night Mode’ or ‘Day Mode’. Having this feature would give them an option of what colour choice would best suit their impairment whilst navigating through the page. </p>
+
       </div>
     </div>
 
